feat: 로고, 버튼 이동

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/png" href="./logo.png" />
     <title>THE달콤플러스 - 프리미엄 영어 교육</title>
     <!-- Fonts and Icons -->
     <link href="https://fonts.googleapis.com" rel="preconnect" />
